styles/main.css
@charset "UTF-8";

@import url('vazirfont.css');
@import url('kalamehfont.css');
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

*,
*::before,
*::after {
  box-sizing: border-box;
  padding: 0;
  margin: 0;

  -webkit-tap-highlight-color: transparent;
}

html:focus-within {
  scroll-behavior: smooth;
}

body {
  min-height: 100vh;

  background-color: #222;

  font-family: Vazir, Roboto, sans-serif;
  font-size: 16px;
  color: #fefefe;
}

img,
picture {
  display: block;

  max-width: 100%;
  height: auto;
}

input,
button,
textarea,
select {
  font: inherit;
}

a {
  text-decoration: none;
}

a:not([class]),
a:not([class]):visited {}

a:not([class]):hover {}

a:not([class]):active {}

@media (prefers-reduced-motion: reduce) {
  *,
  *::before,
  *::after {
    animation-duration: .01ms !important;
    animation-iteration-count: 1;
    transition-duration: .01ms !important;
    scroll-behavior: auto !important;
  }
}

.main {
  display: flex;
  justify-content: center;
  align-items: center;

  min-height: 100vh;
  padding: 32px 16px;
}

.main-container {
  max-width: 768px;
}

.main-heading {
  text-align: center;
  font-family: KalamehWebFaNum;
  font-size: 24px;
}

@media (min-width: 240px) {
  .main-heading {
    font-size: 10vw;
  }
}

.main-heading i {
  display: inline-block;

  background-color: #7014e8;

  font-style: normal;
  text-shadow: 2px 2px 0 #222;

  transform: rotate(4deg);
}

@media (min-width: 320px) {
  .main-heading i {
    text-shadow: 4px 4px 0 #222;
  }
}

.button:link,
.button:visited {
  position: relative;

  display: flex;
  justify-content: center;
  align-items: center;

  padding: 16px;
  border-radius: 1000px;

  line-height: 1.5;
  font-weight: bold;
  color: #fefefe;
  text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.32);

  transition: transform 200ms;
}

.button::before {
  content: '';

  position: absolute;

  width: 100%;
  height: 100%;
  border-radius: 1000px;

  background-color: rgba(255, 255, 255, 0);

  transition: background-color 200ms;
}

.button > .hitbox {
  position: absolute;

  display: none;

  width: 122%;
  height: 122%;
  border-radius: 1000px;
}

@media (any-hover: hover) {
  .button:hover {
    transform: scale(1.1);
  }
  
  .button:hover::before {
    background-color: rgba(255, 255, 255, .16);
  }
}

.button:active {
  transform: scale(.9);
}

.button:active::before {
  background-color: rgba(0, 0, 0, .16);
}

.button:active > .hitbox {
  display: block;
}

.big-button:link,
.big-button:visited {
  max-width: 360px;
  min-height: 88px;
  margin: 48px auto;

  background-color: hsl(173, 77%, 31%);
  background-image: linear-gradient(to top, hsl(173, 77%, 31%), hsl(173, 77%, 41%));

  font-size: 1.5rem;

  box-shadow: 0 16px 32px #111;
}

.or-divider {
  display: flex;
  align-items: center;

  margin: 48px auto;
}

.or-divider::before,
.or-divider::after {
  content: '';

  height: 1px;
  width: 100%;

  background-color: rgba(255, 255, 255, .08);
}

.or-divider-label {
  padding: 0 16px;

  color: rgba(254, 254, 254, 0.64);
}

.button-bar {
  display: flex;
  flex-direction: column;
  justify-content: center;

  overflow: hidden;
}

.space-box {
  flex-shrink: 0;

  width: 16px;
}

.button-container {
  position: relative;

  display: flex;
  justify-content: center;
  align-items: center;

  width: 100%;
  margin-bottom: 112px;
}

.button-container:first-of-type {
  margin-bottom: 128px;
}

.small-button:link,
.small-button:visited {
  width: 180px;
  min-height: 64px;

  background-color: hsl(266, 84%, 49%);
  background-image: linear-gradient(to top, hsl(266, 84%, 49%), hsl(266, 84%, 59%));

  font-size: 1rem;

  box-shadow: 0 8px 16px #111;
}

.button-tooltip {
  position: absolute;
  top: 100%;

  display: flex;
  justify-content: center;

  padding: 16px;
  margin-top: 24px;
  border-radius: 16px;

  background-color: #333;

  line-height: 1.5;

  box-shadow: 0 8px 16px #111;
}

.button-tooltip::before {
  content: '';

  position: absolute;
  bottom: calc(100% - 16px);

  width: 24px;
  height: 24px;
  border-radius: 8px;

  background-color: #333;

  transform: rotate(45deg);
}

